tests/sksl/errors/DuplicateInterfaceBlockName.glsl
### Compilation failed:

error: 5: symbol 'main' was already defined
void main() {
^^^^^^^^^^^
1 error
